fixed styling on fluid jumbo tron landing page. text wasnt aligning correctly

--- a/client/src/pages/Landing/Landing.css
+++ b/client/src/pages/Landing/Landing.css
@@ -16,14 +16,14 @@
 }
 
 #fluidContainerL {
-  margin: 10%;
+  margin-top: 10%;
+  margin-bottom: 10%;
   text-align: center;
   color: white;
   font-weight: 900;
   font-size: medium;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
-    1px 1px 0 #000;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
 #jumbotronImageStudents {
